# duration-predictor

./: CODE_OF_CONDUCT.md  LICENSE  README.md  cabal.project.freeze  duration-predictor.cabal
app/: Main.hs  Wizard.hs
src/: ActivityAggregate.hs  Duration.hs  Entity.hs  Indexable.hs  NonEmptyString.hs  NonEmptyText.hs
src/ActivityAggregate/: Activity.hs  ActivityId.hs  Measurement.hs  Repository.hs
src/ActivityAggregate/Repository/: Internal.hs  State.hs
src/Domain/: Activity.hs  ActivityAggregate.hs  ActivityId.hs  Duration.hs  Measurement.hs
src/InterfaceAdapters/: ActivityRepositoryAsState.hs
src/UseCases/: ActivityAggregate.hs  ActivityRepository.hs
src/Utils/: Entity.hs  Fractional.hs  Indexable.hs  NonEmptyText.hs
tests/: ActivityAggregateTests.hs  DurationTests.hs  NonEmptyStringTests.hs  NonEmptyTextTests.hs  Utils.hs  test.hs
tests/ActivityAggregate/: RepositoryTests.hs
tests/Domain/: ActivityAggregateTests.hs  DurationTests.hs
tests/UseCases/: ActivityAggregateTests.hs
tests/Utils/: NonEmptyTextTests.hs
